--- a/projects/landing/src/app/routes/home-route/home-route.component.html
+++ b/projects/landing/src/app/routes/home-route/home-route.component.html
@@ -1,6 +1,11 @@
+<page-toolbar
+    id="home"
+    class="w-full block h-[84px] absolute top-0 left-0 right-0 z-10"
+></page-toolbar>
+
 <section
     id="home-banner"
-    class="w-full bg-default relative"
+    class="w-full bg-default relative z-0"
 >
     <div class="bg-gradient absolute w-full h-full inset-0 z-0">
         <div class="bg-square absolute inset-0 bg-[bottom_1px_center]"></div>
