--- a/projects/landing/src/app/routes/home-route/home-route.component.html
+++ b/projects/landing/src/app/routes/home-route/home-route.component.html
@@ -13,3 +13,10 @@
 
     <page-banner class="section-container overflow-hidden lg:h-[800px] relative z-20"></page-banner>
 </section>
+
+<section
+    id="about"
+    class="bg-slate-content w-full py-4"
+>
+    <section-about class="section-container z-10"></section-about>
+</section>
