--- a/projects/landing/src/theme/theme.scss
+++ b/projects/landing/src/theme/theme.scss
@@ -41,7 +41,7 @@ body {
 
 .bg-square {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke='rgb(241 245 249 / 0.04)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
-    -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, .3), rgba(0, 0, 0, 1));
+    -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 1));
 }
 
 .bg-gradient {
@@ -61,4 +61,28 @@ body {
     .md\:text-3xl.leading-snug {
         line-height: 1.375;
     }
+}
+
+.bg-slate-content {
+    @apply relative bg-slate-100;
+
+    &:after,
+    &:before {
+        content: '';
+        @apply w-full h-[128px] bg-repeat-x absolute left-0 z-0;
+    }
+
+    &:after {
+        background-image: url('/assets/images/bg-slate-content-bottom.png');
+        @apply bottom-0;
+    }
+
+    &:before {
+        background-image: url('/assets/images/bg-slate-content-top.png');
+        @apply top-0;
+    }
+}
+
+.title-mark {
+    @apply bg-slate-200;
 }
