refactor(banner): change background and animate banner image

--- a/projects/landing/src/app/modules/page-banner/page-banner.component.html
+++ b/projects/landing/src/app/modules/page-banner/page-banner.component.html
@@ -28,6 +28,7 @@
             <img
                 src="https://images.prismic.io/ionicframeworkcom/ffa25bb6-a032-44e4-b2f6-b83c5a73226f_capacitor-homepage-top-0%402x.png?auto=compress,format&rect=0,0,1089,1219&w=545&h=610&q=65"
                 alt="Mockup showing our treatment plan management software"
+                class="banner-image"
             >
         </div>
     </div>
