--- a/projects/landing/src/app/routes/home-route/home-route.component.html
+++ b/projects/landing/src/app/routes/home-route/home-route.component.html
@@ -9,6 +9,7 @@
 >
     <div class="bg-gradient absolute w-full h-full inset-0 z-0">
         <div class="bg-square absolute inset-0 bg-[bottom_1px_center]"></div>
+        <div class="bg-banner"></div>
     </div>
 
     <page-banner class="section-container overflow-hidden lg:h-[800px] relative z-20"></page-banner>
@@ -19,4 +20,11 @@
     class="bg-slate-content w-full py-4"
 >
     <section-about class="section-container z-10"></section-about>
+</section>
+
+<section
+    id="about"
+    class="w-full py-4"
+>
+    <section-what-i-do class="section-container"></section-what-i-do>
 </section>
