refactor(banner): remove animation

--- a/projects/landing/src/app/modules/page-banner/page-banner.component.scss
+++ b/projects/landing/src/app/modules/page-banner/page-banner.component.scss
@@ -1,6 +1,6 @@
 .banner-image {
-    -webkit-animation: action 2s infinite alternate;
-    animation: action 2s infinite alternate;
+    /* -webkit-animation: action 2s infinite alternate;
+    animation: action 2s infinite alternate; */
 }
 
 @-webkit-keyframes action {
