--- a/projects/landing/src/app/routes/home-route/home-route.component.html
+++ b/projects/landing/src/app/routes/home-route/home-route.component.html
@@ -40,81 +40,8 @@
     </div>
 
     <div class="mx-auto overflow-hidden">
-        <div class="hide-scrollbar overflow-x-auto overflow-y-hidden py-6 flex gap-4 stack-animation-container">
-            <div class="flex gap-4 stack-animation">
-                <div class="px-6 py-4 bg-violet-700 text-violet-200">CODING</div>
-
-                <div
-                    class="px-6 py-4 bg-slate-200 text-slate-700 flex items-center gap-2"
-                    *ngFor="let item of stack.coding"
-                >
-                    <div>
-                        <img
-                            class="h-[24px] w-[24px]"
-                            style="max-width: 24px; max-height: 24px"
-                            [src]="item.image"
-                            alt="I work with {{ item.name }}"
-                        >
-                    </div>
-
-                    <div class="whitespace-nowrap">{{item.title}}</div>
-                </div>
-
-                <div class="px-6 py-4 bg-lime-700 text-lime-200">DESIGN</div>
-
-                <div
-                    class="px-6 py-4 bg-slate-200 text-slate-700 flex items-center gap-2"
-                    *ngFor="let item of stack.design"
-                >
-                    <div>
-                        <img
-                            class="h-[24px] w-[24px]"
-                            style="max-width: 24px; max-height: 24px"
-                            [src]="item.image"
-                            alt="I work with {{ item.name }}"
-                        >
-                    </div>
-
-                    <div class="whitespace-nowrap">{{item.title}}</div>
-                </div>
-
-                <div class="px-6 py-4 bg-blue-700 text-blue-200">TOOLING</div>
-
-                <div
-                    class="px-6 py-4 bg-slate-200 text-slate-700 flex items-center gap-2"
-                    *ngFor="let item of stack.tooling"
-                >
-                    <div>
-                        <img
-                            class="h-[24px] w-[24px]"
-                            style="max-width: 24px; max-height: 24px"
-                            [src]="item.image"
-                            alt="I work with {{ item.name }}"
-                        >
-                    </div>
-
-                    <div class="whitespace-nowrap">{{item.title}}</div>
-                </div>
-
-                <div class="px-6 py-4 bg-lime-700 text-lime-200">PLATFORMS</div>
-
-                <div
-                    class="px-6 py-4 bg-slate-200 text-slate-700 flex items-center gap-2"
-                    *ngFor="let item of stack.platform"
-                >
-                    <div>
-                        <img
-                            class="h-[24px] w-[24px]"
-                            style="max-width: 24px; max-height: 24px"
-                            [src]="item.image"
-                            alt="I work with {{ item.name }}"
-                        >
-                    </div>
-
-                    <div class="whitespace-nowrap">{{item.title}}</div>
-                </div>
-            </div>
-        </div>
+        <section-stack class="hide-scrollbar overflow-x-auto overflow-y-hidden py-6 flex lg:flex-row flex-col gap-4 stack-animation-container">
+        </section-stack>
     </div>
 
     <div class="border-t border-slate-300"></div>
