refactor(section/stack): replace images for icons

--- a/projects/landing/src/app/modules/section-stack/section-stack.component.html
+++ b/projects/landing/src/app/modules/section-stack/section-stack.component.html
@@ -7,12 +7,13 @@
             *ngFor="let item of stack.coding"
         >
             <div>
-                <img
-                    class="h-[24px] w-[24px]"
-                    style="max-width: 24px; max-height: 24px"
-                    [src]="item.image"
-                    alt="I work with {{ item.name }}"
-                >
+                <svg
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="text-slate-400 h-5 w-5"
+                    [innerHTML]="item.svg | safeHtml"
+                ></svg>
             </div>
 
             <div class="whitespace-nowrap">{{item.title}}</div>
@@ -25,12 +26,13 @@
             *ngFor="let item of stack.design"
         >
             <div>
-                <img
-                    class="h-[24px] w-[24px]"
-                    style="max-width: 24px; max-height: 24px"
-                    [src]="item.image"
-                    alt="I work with {{ item.name }}"
-                >
+                <svg
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="text-slate-400 h-5 w-5"
+                    [innerHTML]="item.svg | safeHtml"
+                ></svg>
             </div>
 
             <div class="whitespace-nowrap">{{item.title}}</div>
@@ -43,12 +45,13 @@
             *ngFor="let item of stack.tooling"
         >
             <div>
-                <img
-                    class="h-[24px] w-[24px]"
-                    style="max-width: 24px; max-height: 24px"
-                    [src]="item.image"
-                    alt="I work with {{ item.name }}"
-                >
+                <svg
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="text-slate-400 h-5 w-5"
+                    [innerHTML]="item.svg | safeHtml"
+                ></svg>
             </div>
 
             <div class="whitespace-nowrap">{{item.title}}</div>
@@ -61,12 +64,13 @@
             *ngFor="let item of stack.platform"
         >
             <div>
-                <img
-                    class="h-[24px] w-[24px]"
-                    style="max-width: 24px; max-height: 24px"
-                    [src]="item.image"
-                    alt="I work with {{ item.name }}"
-                >
+                <svg
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="text-slate-400 h-5 w-5"
+                    [innerHTML]="item.svg | safeHtml"
+                ></svg>
             </div>
 
             <div class="whitespace-nowrap">{{item.title}}</div>
@@ -81,12 +85,13 @@
             *ngFor="let item of stack.coding"
         >
             <div>
-                <img
-                    class="h-[24px] w-[24px]"
-                    style="max-width: 24px; max-height: 24px"
-                    [src]="item.image"
-                    alt="I work with {{ item.name }}"
-                >
+                <svg
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="text-slate-400 h-5 w-5"
+                    [innerHTML]="item.svg | safeHtml"
+                ></svg>
             </div>
 
             <div class="whitespace-nowrap">{{item.title}}</div>
@@ -99,12 +104,13 @@
             *ngFor="let item of stack.design"
         >
             <div>
-                <img
-                    class="h-[24px] w-[24px]"
-                    style="max-width: 24px; max-height: 24px"
-                    [src]="item.image"
-                    alt="I work with {{ item.name }}"
-                >
+                <svg
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="text-slate-400 h-5 w-5"
+                    [innerHTML]="item.svg | safeHtml"
+                ></svg>
             </div>
 
             <div class="whitespace-nowrap">{{item.title}}</div>
@@ -117,12 +123,13 @@
             *ngFor="let item of stack.tooling"
         >
             <div>
-                <img
-                    class="h-[24px] w-[24px]"
-                    style="max-width: 24px; max-height: 24px"
-                    [src]="item.image"
-                    alt="I work with {{ item.name }}"
-                >
+                <svg
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="text-slate-400 h-5 w-5"
+                    [innerHTML]="item.svg | safeHtml"
+                ></svg>
             </div>
 
             <div class="whitespace-nowrap">{{item.title}}</div>
@@ -135,12 +142,13 @@
             *ngFor="let item of stack.platform"
         >
             <div>
-                <img
-                    class="h-[24px] w-[24px]"
-                    style="max-width: 24px; max-height: 24px"
-                    [src]="item.image"
-                    alt="I work with {{ item.name }}"
-                >
+                <svg
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="text-slate-400 h-5 w-5"
+                    [innerHTML]="item.svg | safeHtml"
+                ></svg>
             </div>
 
             <div class="whitespace-nowrap">{{item.title}}</div>
@@ -157,12 +165,13 @@
             *ngFor="let item of stack.coding"
         >
             <div>
-                <img
-                    class="h-[24px] w-[24px]"
-                    style="max-width: 24px; max-height: 24px"
-                    [src]="item.image"
-                    alt="I work with {{ item.name }}"
-                >
+                <svg
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="text-slate-400 h-5 w-5"
+                    [innerHTML]="item.svg | safeHtml"
+                ></svg>
             </div>
 
             <div class="whitespace-nowrap">{{item.title}}</div>
@@ -175,12 +184,13 @@
             *ngFor="let item of stack.design"
         >
             <div>
-                <img
-                    class="h-[24px] w-[24px]"
-                    style="max-width: 24px; max-height: 24px"
-                    [src]="item.image"
-                    alt="I work with {{ item.name }}"
-                >
+                <svg
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="text-slate-400 h-5 w-5"
+                    [innerHTML]="item.svg | safeHtml"
+                ></svg>
             </div>
 
             <div class="whitespace-nowrap">{{item.title}}</div>
@@ -193,12 +203,13 @@
             *ngFor="let item of stack.tooling"
         >
             <div>
-                <img
-                    class="h-[24px] w-[24px]"
-                    style="max-width: 24px; max-height: 24px"
-                    [src]="item.image"
-                    alt="I work with {{ item.name }}"
-                >
+                <svg
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="text-slate-400 h-5 w-5"
+                    [innerHTML]="item.svg | safeHtml"
+                ></svg>
             </div>
 
             <div class="whitespace-nowrap">{{item.title}}</div>
@@ -211,12 +222,13 @@
             *ngFor="let item of stack.platform"
         >
             <div>
-                <img
-                    class="h-[24px] w-[24px]"
-                    style="max-width: 24px; max-height: 24px"
-                    [src]="item.image"
-                    alt="I work with {{ item.name }}"
-                >
+                <svg
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="text-slate-400 h-5 w-5"
+                    [innerHTML]="item.svg | safeHtml"
+                ></svg>
             </div>
 
             <div class="whitespace-nowrap">{{item.title}}</div>
@@ -231,12 +243,13 @@
             *ngFor="let item of stack.coding"
         >
             <div>
-                <img
-                    class="h-[24px] w-[24px]"
-                    style="max-width: 24px; max-height: 24px"
-                    [src]="item.image"
-                    alt="I work with {{ item.name }}"
-                >
+                <svg
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="text-slate-400 h-5 w-5"
+                    [innerHTML]="item.svg | safeHtml"
+                ></svg>
             </div>
 
             <div class="whitespace-nowrap">{{item.title}}</div>
@@ -249,12 +262,13 @@
             *ngFor="let item of stack.design"
         >
             <div>
-                <img
-                    class="h-[24px] w-[24px]"
-                    style="max-width: 24px; max-height: 24px"
-                    [src]="item.image"
-                    alt="I work with {{ item.name }}"
-                >
+                <svg
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="text-slate-400 h-5 w-5"
+                    [innerHTML]="item.svg | safeHtml"
+                ></svg>
             </div>
 
             <div class="whitespace-nowrap">{{item.title}}</div>
@@ -267,12 +281,13 @@
             *ngFor="let item of stack.tooling"
         >
             <div>
-                <img
-                    class="h-[24px] w-[24px]"
-                    style="max-width: 24px; max-height: 24px"
-                    [src]="item.image"
-                    alt="I work with {{ item.name }}"
-                >
+                <svg
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="text-slate-400 h-5 w-5"
+                    [innerHTML]="item.svg | safeHtml"
+                ></svg>
             </div>
 
             <div class="whitespace-nowrap">{{item.title}}</div>
@@ -285,12 +300,13 @@
             *ngFor="let item of stack.platform"
         >
             <div>
-                <img
-                    class="h-[24px] w-[24px]"
-                    style="max-width: 24px; max-height: 24px"
-                    [src]="item.image"
-                    alt="I work with {{ item.name }}"
-                >
+                <svg
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="text-slate-400 h-5 w-5"
+                    [innerHTML]="item.svg | safeHtml"
+                ></svg>
             </div>
 
             <div class="whitespace-nowrap">{{item.title}}</div>
