--- a/projects/landing/src/app/modules/section-about/section-about.component.html
+++ b/projects/landing/src/app/modules/section-about/section-about.component.html
@@ -15,25 +15,22 @@
         </div>
     </div>
 
-    <div></div>
+    <div class="flex flex-wrap gap-8 mt-12">
+        <div
+            class="flex items-center gap-4 py-2 pl-2 pr-4 rounded-full border border-slate-300"
+            *ngFor="let item of about"
+        >
+            <div class="bg-slate-300 rounded-full w-10 h-10 flex items-center justify-center">
+                <svg
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    class="text-slate-700 w-6 h-6"
+                    [innerHTML]="item.svg | safeHtml"
+                ></svg>
+            </div>
 
-    <svg
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-        class="text-blue-500"
-        [innerHTML]="icons.icons.ai | safeHtml"
-    ></svg>
-    
-    <svg
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-        class="text-blue-500"
-        [innerHTML]="icons.icons.figma | safeHtml"
-    ></svg>
+            <div [innerHTML]="item.title"></div>
+        </div>
+    </div>
 </div>
