--- a/projects/landing/src/app/routes/home-route/home-route.component.html
+++ b/projects/landing/src/app/routes/home-route/home-route.component.html
@@ -46,3 +46,10 @@
 
     <div class="border-t border-slate-300"></div>
 </section>
+
+<section
+    id="article"
+    class="w-full py-4 bg-square-top"
+>
+    <section-article class="section-container"></section-article>
+</section>
