--- a/projects/landing/src/app/routes/home-route/home-route.component.html
+++ b/projects/landing/src/app/routes/home-route/home-route.component.html
@@ -53,3 +53,10 @@
 >
     <section-article class="section-container"></section-article>
 </section>
+
+<section
+    id="about"
+    class="bg-slate-content w-full py-4"
+>
+    <section-ng-tw class="section-container z-10"></section-ng-tw>
+</section>
