refactor(banner): change text

--- a/projects/landing/src/app/modules/page-banner/page-banner.component.html
+++ b/projects/landing/src/app/modules/page-banner/page-banner.component.html
@@ -3,7 +3,7 @@
     <div class="lg:w-1/2 w-full max-w-lg md:max-w-full space-y-12 mx-auto">
         <div class="space-y-4 lg:max-w-full max-w-md mx-auto">
             <h1 class="text-primary-50 text-3xl lg:text-5xl font-bold leading-snug">I like to develop awesome web apps and build modern UI’s</h1>
-            <p class="text-primary-300 text-xl lg:text-2xl">Software Engineer building/supporting awesome projects like kulturecity.org and careplan.ai with a javascript full stack</p>
+            <p class="text-primary-300 text-xl lg:text-2xl">Software Engineer building awesome projects like careplan.ai with a javascript full stack</p>
         </div>
 
         <div class="flex lg:flex-row flex-col gap-4">
@@ -13,7 +13,7 @@
                     color="secondary"
                     layout="raised"
                     size="xl"
-                    href="https://app.usemotion.com/meet/corey-persic/careplan-demo"
+                    href=""
                     target="_blank"
                     class="uppercase"
                 >
