feat(what-i-do): images

--- a/projects/landing/src/app/modules/section-what-i-do/section-what-i-do.component.html
+++ b/projects/landing/src/app/modules/section-what-i-do/section-what-i-do.component.html
@@ -11,10 +11,10 @@
             <div class="lg:w-6/12 w-full order-last">
                 <img
                     class="mx-auto"
-                    src="/assets/images/what-i-do-placeholder.png"
+                    src="/assets/images/wid-mobile-app-developer-working-remote-from-brazil-to-canada-usa.png"
                     alt="Mockup presenting our treatment plan builder for healthcare clinics"
-                    width="440"
-                    height="337.52"
+                    width="640"
+                    height="564"
                 >
             </div>
 
@@ -285,10 +285,10 @@
             <div class="lg:w-6/12 w-full lg:order-first order-last">
                 <img
                     class="mx-auto"
-                    src="/assets/images/what-i-do-placeholder.png"
+                    src="/assets/images/wid-web-developer-working-remote-from-brazil-to-canada-usa.png"
                     alt="Mockup presenting our exercise prescription builder for healthcare clinics"
-                    width="583.33"
-                    height="447.48"
+                    width="640"
+                    height="564"
                 >
             </div>
 
@@ -558,10 +558,10 @@
             <div class="lg:w-6/12 w-full order-last">
                 <img
                     class="mx-auto"
-                    src="/assets/images/what-i-do-placeholder.png"
+                    src="/assets/images/wid-open-source-developer-working-remote-from-brazil-to-canada-usa.png"
                     alt="Mockup presenting our secure in-app chat for healthcare clinics"
-                    width="583.33"
-                    height="447.48"
+                    width="640"
+                    height="564"
                 >
             </div>
 
@@ -829,10 +829,10 @@
             <div class="lg:w-6/12 w-full lg:order-first order-last">
                 <img
                     class="mx-auto"
-                    src="/assets/images/what-i-do-placeholder.png"
+                    src="/assets/images/wid-web-developers-family.png"
                     alt="Mockup presenting our exercise prescription builder for healthcare clinics"
-                    width="583.33"
-                    height="447.48"
+                    width="640"
+                    height="564"
                 >
             </div>
 
@@ -1091,7 +1091,7 @@
                 <div class="gap-4 md:text-right">
                     <h3 class="font-semibold text-base text-blue-700 mt-6">Family</h3>
                     <h2 class="text-[32px] leading-snug font-medium text-slate-700 mt-2">A fuel for my tech work</h2>
-                    <p class="text-base text-slate-600 mt-6">I'm a husband and father of a young little fella and a lazy/food thief beagle. I love to play with my kid and pet my doggy. Running and Swimming at the beach is something i try to do in my free time.</p>
+                    <p class="text-base text-slate-600 mt-6">Husband, Father of a young little fella and a lazy/food thief beagle. I love to play with my kid and doggy.<br><br> Running and Swimming at the beach is something I try to do on a regular basis in my free time.</p>
                 </div>
             </div>
         </div>
