--- a/projects/landing/src/app/routes/home-route/home-route.component.html
+++ b/projects/landing/src/app/routes/home-route/home-route.component.html
@@ -48,7 +48,7 @@
 </section>
 
 <section
-    id="article"
+    id="articles"
     class="w-full py-4 bg-square-top"
 >
     <section-article class="section-container"></section-article>
@@ -59,4 +59,11 @@
     class="bg-slate-content w-full py-4"
 >
     <section-ng-tw class="section-container z-10"></section-ng-tw>
+</section>
+
+<section
+    id="contact"
+    class="w-full py-4 bg-slate-900"
+>
+    <section-contact class="section-container"></section-contact>
 </section>
