chore(): general fixes

--- a/projects/landing/src/app/modules/page-banner/page-banner.component.html
+++ b/projects/landing/src/app/modules/page-banner/page-banner.component.html
@@ -13,9 +13,9 @@
                     color="secondary"
                     layout="raised"
                     size="xl"
-                    href=""
-                    target="_blank"
                     class="uppercase"
+                    [routerLink]="['/']"
+                    fragment="contact"
                 >
                     Get in touch
                 </a>
