--- a/projects/landing/src/app/modules/page-toolbar/page-toolbar.component.html
+++ b/projects/landing/src/app/modules/page-toolbar/page-toolbar.component.html
@@ -33,28 +33,37 @@
         </div>
 
         <div class="flex items-center pl-6 gap-6">
-            <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                class="h-5 w-5"
-                fill="none"
+            <a
+                href="https://mtda.medium.com/"
+                target="_blank"
             >
-                <path
-                    d="M13.5374 11.8153C13.5374 15.5792 10.5069 18.6303 6.76884 18.6303C3.03073 18.6303 0 15.5785 0 11.8153C0 8.05212 3.0305 5 6.76884 5C10.5072 5 13.5374 8.05143 13.5374 11.8153ZM20.9628 11.8153C20.9628 15.3582 19.4476 18.2314 17.5784 18.2314C15.7092 18.2314 14.194 15.3582 14.194 11.8153C14.194 8.27242 15.709 5.39922 17.5782 5.39922C19.4474 5.39922 20.9626 8.2715 20.9626 11.8153H20.9628ZM24 11.8153C24 14.9888 23.4672 17.5631 22.8097 17.5631C22.1522 17.5631 21.6196 14.9895 21.6196 11.8153C21.6196 8.64106 22.1524 6.0675 22.8097 6.0675C23.4669 6.0675 24 8.64083 24 11.8153"
-                    class="fill-current text-primary-400"
-                />
-            </svg>
-
-            <svg
-                viewBox="0 0 16 16"
-                class="w-5 h-5"
-                fill="none"
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    class="h-5 w-5"
+                    fill="none"
+                >
+                    <path
+                        d="M13.5374 11.8153C13.5374 15.5792 10.5069 18.6303 6.76884 18.6303C3.03073 18.6303 0 15.5785 0 11.8153C0 8.05212 3.0305 5 6.76884 5C10.5072 5 13.5374 8.05143 13.5374 11.8153ZM20.9628 11.8153C20.9628 15.3582 19.4476 18.2314 17.5784 18.2314C15.7092 18.2314 14.194 15.3582 14.194 11.8153C14.194 8.27242 15.709 5.39922 17.5782 5.39922C19.4474 5.39922 20.9626 8.2715 20.9626 11.8153H20.9628ZM24 11.8153C24 14.9888 23.4672 17.5631 22.8097 17.5631C22.1522 17.5631 21.6196 14.9895 21.6196 11.8153C21.6196 8.64106 22.1524 6.0675 22.8097 6.0675C23.4669 6.0675 24 8.64083 24 11.8153"
+                        class="fill-current text-primary-400"
+                    />
+                </svg>
+            </a>
+            <a
+                href="https://github.com/matheusdavidson"
+                target="_blank"
             >
-                <path
-                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
-                    class="fill-current text-primary-400"
-                ></path>
-            </svg>
+                <svg
+                    viewBox="0 0 16 16"
+                    class="w-5 h-5"
+                    fill="none"
+                >
+                    <path
+                        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
+                        class="fill-current text-primary-400"
+                    ></path>
+                </svg>
+            </a>
         </div>
 
         <div class="block lg:hidden pl-6">
@@ -98,19 +107,6 @@
             (click)="dropdown.close()"
         >
             {{item.label}}
-        </a>
-
-        <div class="w-full h-[1px] bg-gray-200 my-4"></div>
-
-        <a
-            class="block px-4 py-2 text-sm text-primary-500 cursor-pointer font-medium"
-            role="menuitem"
-            tabindex="-1"
-            href="https://app.usemotion.com/meet/corey-persic/careplan-demo"
-            target="_blank"
-            (click)="dropdown.close()"
-        >
-            Book a Demo
         </a>
     </div>
 </tw-dropdown>
