--- a/projects/landing/src/app/modules/section-contact/section-contact.component.html
+++ b/projects/landing/src/app/modules/section-contact/section-contact.component.html
@@ -129,7 +129,11 @@
 
     <div class="flex flex-col sm:flex-row sm:items-center gap-6 sm:gap-4">
         <div class="flex-1">
-            <button class="w-12 h-12 flex justify-center items-center rounded-full bg-slate-700">
+            <button
+                class="w-12 h-12 flex justify-center items-center rounded-full bg-slate-700"
+                [routerLink]="['/']"
+                fragment="home"
+            >
                 <svg
                     width="24"
                     height="24"
